--- a/experimentA/rendering_settings/Tonsil3.yml
+++ b/experimentA/rendering_settings/Tonsil3.yml
@@ -5,41 +5,41 @@ channels:
     label: CD3-170Er
     color: FF0000
     active: true
-    min: 0
-    max: 200
+    start: 0
+    end: 200
   2:
     label: CD19-169Tm
     color: 00FF00
     active: true
-    min: 0
-    max: 255
+    start: 0
+    end: 255
   3:
     label: CD324/E-Cadherin-158Gd
     color: 0000FF
     active: true
-    min: 0
-    max: 200
+    start: 0
+    end: 200
   4:
     label: HistoneH3-176Yb
     color: 00FFFF
     active: true
-    min: 0
-    max: 255
+    start: 0
+    end: 255
   5:
     label: collagen14-173Yb
     color: FF00FF
     active: true
-    min: 0
-    max: 200
+    start: 0
+    end: 200
   6:
     label: CD279/PD-1-175Lu
     color: FFFF00
     active: true
-    min: 0
-    max: 200
+    start: 0
+    end: 200
   7:
     label: alphaSMA-141Pr
     color: FFFFFF
     active: true
-    min: 50
-    max: 255
+    start: 50
+    end: 255
