--- a/experimentA/rendering_settings/Tonsil3.yml
+++ b/experimentA/rendering_settings/Tonsil3.yml
@@ -45,65 +45,62 @@ channels:
     end: 255
   8:
     active: false
-    label: CD206-168Er
+    label: IL-21-164Dy
   9:
     active: false
-    label: IL-21-164Dy
+    label: CD185/CXCR5-171Yb
   10:
     active: false
-    label: CD185/CXCR5-171Yb
+    label: CD45-154Sm
   11:
     active: false
-    label: CD45-154Sm
+    label: CD123-148Nd
   12:
     active: false
-    label: CD123-148Nd
+    label: CXCL13-157Gd
   13:
     active: false
-    label: CXCL13-157Gd
+    label: CD1c/BDCA1-152Sm
   14:
     active: false
-    label: CD1c/BDCA1-152Sm
+    label: avanti-lipid
   15:
     active: false
-    label: avanti-lipid
+    label: Foxp3-162Dy
   16:
     active: false
-    label: Foxp3-162Dy
+    label: CD45RA-155Gd
   17:
     active: false
-    label: CD45RA-155Gd
+    label: Bcl6-163Dy
   18:
     active: false
-    label: Bcl6-163Dy
+    label: CD44-153Eu
   19:
     active: false
-    label: CD44-153Eu
+    label: CTLA4-161Dy
   20:
     active: false
-    label: CTLA4-161Dy
+    label: CD8a-146Nd
   21:
     active: false
-    label: CD8a-146Nd
+    label: CD11c-159Tb
   22:
     active: false
-    label: CD11c-159Tb
+    label: Rutenium red
   23:
     active: false
-    label: Rutenium red
+    label: DNA1-191/193Ir
   24:
     active: false
-    label: DNA-191/193Ir
+    label: Bcl2-166Er
   25:
     active: false
-    label: Bcl2-166Er
+    label: DNA3-191/193Ir
   26:
     active: false
-    label: DNA-191/193Ir
-  27:
-    active: false
     label: CD14-156Gd
-  28:
+  27:
     active: false
     label: Ki67-168Er
 greyscale: false
