Skip all steps during import (min/max, thumbnails)
Rendering setting will be set up via YML file so computing them at import time
is unnecessary

--- a/experimentA/idr0054-experimentA-bulk.yml
+++ b/experimentA/idr0054-experimentA-bulk.yml
@@ -4,7 +4,7 @@ exclude: "clientpath"
 output: "yaml"
 parallel_upload: "5"
 path: "idr0054-experimentA-filePaths.tsv"
-skip: "checksum"
+skip: "all"
 transfer: "ln_s"
 columns:
   - target
